<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/btn"
    android:padding="@dimen/a1"
    tools:context=".zhuye">
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:onClick="onClick"

        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:onClick="onClick"

        />
    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:onClick="onClick"

        />
    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:onClick="onClick"
        />


    <Button
        android:id="@+id/btn11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eleven"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twelve"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thirteen"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourteen"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fifteen"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixteen"
        android:onClick="onClick"
        />




</LinearLayout>